<resources>
    <string name="app_name">BMICalculator</string>
    <string name="srtObesityWt">Obesity</string>
    <string name="srtOverWt">OverWeight</string>
    <string name="srtOverWtCare">OverWeight\n(take care yourself a bit)</string>
    <string name="srtUnderWt">UnderWeight</string>
    <string name="srtUnderWtCare">UnderWeight\n(take care yourself a bit)</string>
    <string name="srtHealthy">Healthy</string>

    <string name="height">Height:</string>
    <string name="height_">Height</string>
    <string name="feet">Feet</string>
    <string name="cm">CM</string>
    <string name="inch">Inch</string>
    <string name="result">Result</string>
    <string name="healthy">Healthy</string>
    <string name="weight">Weight:</string>
    <string name="weight_">Weight</string>
    <string name="kg">KG</string>
    <string name="gm">Gm</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="age">Age:</string>
    <string name="age_">Age</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="image">image</string>
    <string name="pound">Pound</string>
    <string name="calculate">Submit</string>
    <string name="image_description">image</string>
</resources>